--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"ejs": "^3.1.6",
 		"express": "^4.17.1",
 		"mongoose": "^5.12.12",
-		"pusher": "^5.0.0"
+		"pusher": "^5.0.0",
+		"socket.io": "^4.1.2"
 	}
 }
