--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"express": "^4.17.1",
 		"mongoose": "^5.12.12",
 		"pusher": "^5.0.0",
-		"socket.io": "^4.1.2"
+		"socket.io": "^4.1.2",
+		"uuid": "^8.3.2"
 	}
 }
